<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@id/ivMainLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMainLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_music_round"
        app:layout_constraintBottom_toTopOf="@id/btnProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProfile"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/profile_text"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/btnHomeSignIn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMainLogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHomeSignIn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/sign_in_text"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>